# CPU-Visualizer

./: .gitignore  ALU.html  CHANGELOG.md  LogicUnit.html  README.md  index.html  planned.txt
.github/ISSUE_TEMPLATE/: bug_report.yaml
assets/: index-9ZtJZjPx.js  index-CnjQNmgZ.js  index-DCf31u4p.js  index-hAigP_bi.js
backend/: CMakeLists.txt
backend/include/: ALU.hpp  Adder.hpp  BranchCondCheck.hpp  CPU.hpp  Component.hpp  ControlUnit.hpp  FullAdder.hpp  Gates.hpp  InstrCache.hpp  Instruction.hpp  LogicUnit.hpp  MUX.hpp  NextAddr.hpp  PC.hpp  RegFile.hpp  Shifter.hpp  SignExtender.hpp  Wire.hpp
backend/src/: ALU.cpp  Adder.cpp  BranchCondCheck.cpp  CPU.cpp  ControlUnit.cpp  FullAdder.cpp  Gates.cpp  InstrCache.cpp  Instruction.cpp  LogicUnit.cpp  MUX.cpp  NextAddr.cpp  PC.cpp  RegFile.cpp  Shifter.cpp  SignExtender.cpp  main.cpp
backend/tests/: CMakeLists.txt  readMe.txt  test_adder.cpp  test_alu.cpp  test_branchCondCheck.cpp  test_controlUnit.cpp  test_cpu.cpp  test_fullAdder.cpp  test_gates.cpp  test_getWireByPath.cpp  test_instrCache.cpp  test_instruction.cpp  test_lu.cpp  test_mux.cpp  test_nextAddr.cpp  test_pc.cpp  test_regFile.cpp  test_shifter.cpp  test_signextender.cpp  test_wire.cpp
backend/wasm/: CMakeLists.txt  bindings.cpp
docs/assets/: index-D3S4iXOX.css  index-aEbSNn-9.js
docs/wasm/: cpu.js
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/wasm/: cpu.js  cpu.wasm
frontend/src/: App.css  App.jsx
frontend/src/components/: CodeEditor.jsx
frontend/src/cpu/: CpuContext.jsx  WireTooltip.jsx  cpuApi.js  instructions.js  useClickableElements.js  wasmModule.js
frontend/src/docs/: planned.md  program.md  welcome.md
frontend/src/pages/: InfoPage.css  InfoPage.jsx
frontend/src/sim/: alu.js
frontend/src/views/: ALUView.jsx  AdderView.jsx  BranchCondCheckView.jsx  CPUView.jsx  FullAdderView.jsx  LogicUnitView.jsx  MUX2to1View.jsx  MUX4to1View.jsx  NextAddrView.jsx  ShifterView.jsx
wasm/: cpu.js
